--- a/resources/styles/login.scss
+++ b/resources/styles/login.scss
@@ -1,4 +1,6 @@
 .section {
+  display: flex;
+  flex-wrap: wrap;
   height: 100vh;
   margin: 0;
   background: $c-back;
