--- a/resources/styles/nav.scss
+++ b/resources/styles/nav.scss
@@ -4,6 +4,7 @@
 }
 
 .navbar {
+  display: flex;
   flex-basis: 100%;
   background: $c-green;
 
